--- a/appOffline/app/inicio/inicio.html
+++ b/appOffline/app/inicio/inicio.html
@@ -44,10 +44,10 @@
     <tbody>
         <tr ng-repeat="u in usuarios">
             <td>{{ u.nombre }}</td>
-            <td>{{ u.nombre }}</td>
-            <td>{{ u.nombre }}</td>
-            <td>{{ u.nombre }}</td>
-            <td>{{ u.nombre }}</td>
+            <td>{{ u.clave }}</td>
+            <td>{{ u.departamento }}</td>
+            <td>{{ u.altaLog }}</td>
+            <td>{{ u.modiLog }}</td>
             <td style="padding: 0">
                 <a class="waves-effect btn light-blue"><i class="material-icons ">mode_edit</i></a>
             </td>
