Ya funciona correctamente la insercion y actualizacion de los datos de manera visual. Se resolvio utilizando un array de promesas.

--- a/appOffline/app/inicio/inicio.html
+++ b/appOffline/app/inicio/inicio.html
@@ -48,8 +48,8 @@
             <td>{{ u.departamento }}</td>
             <td>{{ u.altaLog }}</td>
             <td>{{ u.modiLog }}</td>
-            <td style="padding: 0">
-                <a class="waves-effect btn light-blue"><i class="material-icons ">mode_edit</i></a>
+            <td>
+                <a style="cursor: pointer;">Editar</a>
             </td>
         </tr>
        
