--- a/appOffline/index.html
+++ b/appOffline/index.html
@@ -48,7 +48,7 @@
     <script src="js/jquery-2.2.3.min.js"></script>
     <script src="js/materialize.min.js"></script>
     <script src="js/angular.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>
+    <script src="js/moment.min.js"></script>
 
     <!-- complementos angular -->
     <script src="js/angular-ui-router.min.js"></script>
